--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -1,3 +1,12 @@
-body{
-  background-color: red;
+body {
+    font: {
+        size: rem(16);
+        weight: 400;
+    };
+    line-height: 1.5;
+    letter-spacing: normal;
+    font-stretch: normal;
+    font-style: normal;
+    color: $text-black;
+    background-color: $white;
 }
