--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-@import "helpers/variables";
-@import "helpers/mixins";
-@import "helpers/functions";
 @import "vendor/libs";
+@import "helpers/variables";
+@import "helpers/functions";
 @import "base/fonts";
+@import "base/buttons";
 @import "base/general";
 @import "../blocks/modules";
