--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -14,20 +14,44 @@
             <p class="small-text small-text--caption">описание в карточках</p>
         </div>
         <div class="col-4">
-            <button class="btn btn-dark">normal</button>
-            <button class="btn btn-dark btn-lg">Large</button>
-            <button class="btn btn-dark btn-sx">Small</button>
-            <button class="btn btn-dark"><i class="btn_icon btn__icon--left btn__icon--plus"></i>Icon left</button>
-            <button class="btn btn-dark">icon right<i class="btn__icon btn__icon--right btn__icon--plus"></i></button>
-            <button class="btn btn-dark">normal</button>
-            <button class="btn btn-primary"></i>Primary Button</button>
-            <button class="btn btn-primary"><i class="btn__icon btn__icon--left btn__icon--plus"></i>Primary Button</button>
-            <button class="btn btn-primary" disabled><i class="btn__icon btn__icon--left btn__icon--plus"></i>Primary disabled Button</button>
-            <button class="btn btn-secondary" >Secondary Button</button>
-            <button class="btn btn-secondary" >Secondary Button<i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></button>
-            <button class="btn btn-secondary" disabled>Secondary disabled Button<i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></button>
-            <button class="btn btn-danger"><i class="btn__icon btn__icon--left btn__icon--close"></i>Red Button</btb>
-            <button class="btn btn-danger">Red Button</btb>
+            <button class="btn btn--dark">normal</button>
+            <button class="btn btn--dark btn--lg">Large</button>
+            <button class="btn btn--dark btn--sx">Small</button>
+            <button class="btn btn--dark"><i class="btn__icon btn__icon--left btn__icon--plus"></i>Icon left</button>
+            <button class="btn btn--dark">icon right<i class="btn__icon btn__icon--right btn__icon--plus"></i></button>
+            <button class="btn btn--dark">normal</button>
+            <button class="btn btn--primary"></i>Primary Button</button>
+            <button class="btn btn--primary"><i class="btn__icon btn__icon--left btn__icon--plus"></i>Primary Button</button>
+            <button class="btn btn--primary" disabled><i class="btn__icon btn__icon--left btn__icon--plus"></i>Primary disabled Button</button>
+            <button class="btn btn--secondary" >Secondary Button</button>
+            <button class="btn btn--secondary" >Secondary Button<i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></button>
+            <button class="btn btn--secondary" disabled>Secondary disabled Button<i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></button>
+            <button class="btn btn--danger"><i class="btn__icon btn__icon--left btn__icon--close"></i>Red Button</button>
+            <button class="btn btn--danger">Red Button</button>
+        </div>
+        
+        <div class="col-4">
+            <label for="" class="fields">
+                <input type="text" class="fields__input">
+                <span class="fields__placeholder">Тип</span>
+            </label>
+
+            <label for="" class="fields fields--error">
+                <input type="text" class="fields__input">
+                <span class="fields__placeholder">Тип</span>
+                <span class="fields__error">Ошибка поля!</span>
+            </label>
+
+            <label for="" class="fields fields--error fields--required">
+                <input type="text" class="fields__input" required>
+                <span class="fields__placeholder">Тип</span>
+                <span class="fields__error">Ошибка поля!</span>
+            </label>
+
+            <label for="" class="fields">
+                <textarea class="fields__input" name="" id="" cols="30" rows="6"></textarea>
+                <span class="fields__placeholder">Тип</span>
+            </label>
         </div>
        
     </div>
