--- a/src/styles/base/_inputs.scss
+++ b/src/styles/base/_inputs.scss
@@ -6,28 +6,59 @@
         @include transition();
         display: block;
         position: absolute;
-        top: 20px;
-        right: 16px;
-        left: 16px;
-        font-size: rem(16);
+        top: 1px;
+        right: 18px;
+        left: 1px;
+        padding: 12px 0 4px 16px;
+        background-color: $white;
+        border-radius: 5px 5px 0 0;
+        font-size: rem(13);
         font-weight: 400;
-        line-height: 1.25;
+        line-height: 1.23;
         color: $text-silver;
         pointer-events: none;
+        opacity: 1;
+        resize: vertical;
     }
     &__input {
         @include transition();
         box-sizing: border-box;
-        border: solid 1px $silver-light;
-        padding: rem(20) rem(16) rem(24);
         border-radius: 5px;
-        background-color: $silver-light;
         outline: none;
         font-size: rem(16);
         line-height: 1.25;
         color: $text-black;
-        &:hover{
+        background-color: $white;
+        border: solid 1px $border-10;
+        padding: rem(32) rem(16) rem(12);
+
+        &:focus {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+        }
+        &:hover {
             border-color: $border-20;
+        }
+
+
+        &::placeholder {
+            font-size: rem(16);
+            font-weight: 400;
+            line-height: 1.25;
+            color: $text-silver;
+        }
+        &:placeholder-shown {
+            border: solid 1px $silver-light;
+            padding: rem(20) rem(16) rem(24);
+            background-color: $silver-light;
+
+            & + .fields__placeholder {
+                top: 20px;
+                opacity: 0;
+            }
+
+            &:hover {
+                border-color: $border-20;
+            }
         }
     }
     &__error {
@@ -44,6 +75,38 @@
         }
         .fields__placeholder {
             color: $coral;
+        }
+    }
+
+    &--locked {
+        pointer-events: none;
+        .fields__input {
+            background-color: $white;
+            border-color: $border-10;
+            color: $border-20;
+            &:placeholder-shown {
+                background-color: $white;
+                border-color: $border-10;
+            }
+            &::placeholder {
+                color: $border-20;
+            }
+            & + .fields__placeholder {
+                color: $border-20;
+            }
+        }
+    }
+
+    &--required {
+        position: relative;
+        &:after {
+            content: "";
+            position: absolute;
+            top: 8px;
+            right: 8px;
+            width: 8px;
+            height: 8px;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h8v8H0z'/%3E%3Cpath fill='%231A1A1A' fill-rule='nonzero' d='M7 4.277l-2.724.556 1.889 2.412L5.07 8 3.52 5.369 1.949 8 .855 7.245l1.89-2.412L0 4.277l.447-1.242 2.606.983L2.823 1h1.373l-.229 3.018 2.615-.983z'/%3E%3C/g%3E%3C/svg%3E%0A");
         }
     }
 }
