--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -12,3 +12,16 @@ body {
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
 }
+
+.wrapper {
+    @extend .container;
+}
+
+.main-header {
+    width: 100%;
+    margin-bottom: 24px;
+    h1{
+        margin-bottom: 0;
+        line-height: rem(72);
+    }
+}
