start news page

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -50,3 +50,7 @@ $grid-columns: 12;
 $grid-gutter-width: 32px;
 $grid-row-columns: 6;
 
+$link-color:                              $coral;
+$link-decoration:                         none;
+$link-hover-color:                        $coral-dark;
+$link-hover-decoration:                   underline;
