--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,3 +1,4 @@
 @import "modules/header/header";
 @import "modules/footer/footer";
 @import "modules/breadcrumbs/breadcrumbs";
+@import "modules/card/card";
