end  news page start text-page.html

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -2,3 +2,4 @@
 @import "modules/footer/footer";
 @import "modules/breadcrumbs/breadcrumbs";
 @import "modules/card/card";
+@import "modules/video/video";
