--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,5 +6,6 @@
 @import "base/buttons";
 @import "base/inputs";
 @import "base/general";
+@import "base/icons";
 @import "../blocks/modules";
 @import "pages/news";
