--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -1,4 +1,178 @@
 .news {
-    margin-right: -32px;
-    margin-left: -32px;
+    margin-bottom: 76px;
+
+    &__row {
+        margin-right: -32px;
+        margin-left: -32px;
+        align-items: stretch;
+
+        & > div {
+            display: flex;
+        }
+
+        .card {
+            flex: 1 1 auto;
+            margin-bottom: 32px;
+
+            &--main {
+                height: 440px;
+                max-height: none;
+            }
+        }
+
+        .btn {
+            width: 352px;
+            margin: auto;
+        }
+
+        .news-slider {
+            position: relative;
+            height: 440px;
+            margin-bottom: 32px;
+
+            .swiper-container {
+                height: 100%;
+            }
+
+            .swiper-wrapper {
+                height: 100%;
+            }
+
+            .swiper-slide {
+                height: 100%;
+
+                .card {
+                    height: 100%;
+                    &:hover {
+                        transform: none;
+                    }
+
+                    .card-title {
+                        width: 83.333%;
+                        margin-bottom: 8px;
+                        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+                        font-size: rem(40);
+                        font-weight: $font-weight-bold;
+                        line-height: 1.2;
+                        color: $white;
+                    }
+
+                    .card-text {
+                        width: 83.333%;
+                        font-size: rem(16);
+                        line-height: 1.25;
+                        color: $white;
+                    }
+                }
+            }
+
+            .swiper-button {
+                display: none;
+                &.show {
+                    display: block;
+                }
+            }
+
+            .swiper-pagination {
+                display: none;
+                &.show {
+                    display: flex;
+                }
+            }
+        }
+    }
+}
+
+.detours {
+    margin-bottom: 64px;
+    &__row {
+        margin-right: -32px;
+        margin-left: -32px;
+    }
+
+    &-slider {
+        position: relative;
+
+        .swiper-container {
+            margin-top: -8px;
+            padding-top: 8px;
+        }
+
+        .swiper-wrapper {
+            align-items: stretch;
+        }
+
+        .swiper-slide {
+            height: auto;
+        }
+    }
+}
+
+.video-gallery {
+    margin-bottom: 64px;
+
+    &__row {
+        margin-right: -32px;
+        margin-left: -32px;
+    }
+}
+
+.articles {
+    margin-bottom: 64px;
+
+    &__row {
+        margin-right: -32px;
+        margin-left: -32px;
+        align-items: stretch;
+    }
+
+    &-slider {
+        position: relative;
+
+        .swiper-container {
+            margin-top: -8px;
+            padding-top: 8px;
+        }
+
+        .swiper-wrapper {
+            align-items: stretch;
+        }
+
+        .swiper-slide {
+            height: auto;
+        }
+    }
+}
+
+.tags {
+    margin-bottom: 80px;
+
+    &__row {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        max-width: 736px;
+        margin: auto;
+    }
+
+    &__item {
+        @include transition();
+        margin: 0 4px 8px;
+        padding: 4px 16px;
+        font-size: rem(16);
+        line-height: 1.25;
+        letter-spacing: normal;
+        color: $text-silver;
+        border-radius: 16px;
+        background-color: $silver-light;
+
+        &:hover {
+            text-decoration: none;
+            color: $coral;
+        }
+        &:active {
+            transform: scale(.96);
+        }
+    }
 }
